[n/a] Reorganize project structure for VIPER architecture
- Move view controllers to View/ViewControllers/ directory
- Move storyboards to View/Storyboards/ directory
- Remove default Main.storyboard and replace with Root.storyboard
- Update project references and SwiftGen configuration
- Maintain proper launch screen organization

--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -17,7 +17,7 @@ xcassets:
 # Generate constants for storyboards and XIBs
 ib:
   inputs:
-    - VIPERSample/Base.lproj
+    - VIPERSample/View/Storyboards
   outputs:
     - templateName: scenes-swift5
       output: Storyboards+Generated.swift
